Sufficient locomotive js code removed. Scrollbar fixed and start last section fixed.

--- a/src/scss/components/_locomotive.scss
+++ b/src/scss/components/_locomotive.scss
@@ -1,130 +1,132 @@
 html:not(.has-scroll-init) {
-  cursor: wait;
-  overflow: hidden;
+	@media (min-width: $breakpoint-large) {
+		cursor: wait;
+		overflow: hidden;
+	}
 }
 
 html.has-scroll-smooth {
-  overflow: hidden;
+	overflow: hidden;
 }
 
 html.has-scroll-dragging {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 .has-scroll-smooth body {
-  overflow: hidden;
+	overflow: hidden;
 }
 
 .has-scroll-smooth [data-scroll-container] {
-  min-height: 100vh;
+	min-height: 100vh;
 }
 
 [data-scroll-direction='horizontal'] [data-scroll-container] {
-  white-space: nowrap;
-  height: 100vh;
-  display: inline-block;
+	white-space: nowrap;
+	height: 100vh;
+	display: inline-block;
 }
 
 [data-scroll-direction='horizontal'] [data-scroll-section] {
-  display: inline-block;
-  vertical-align: top;
-  white-space: nowrap;
-  height: 100%;
+	display: inline-block;
+	vertical-align: top;
+	white-space: nowrap;
+	height: 100%;
 }
 
 .c-header {
-  @media (min-width: 1000px) {
-    height: 100vh;
-    min-height: 46.875rem;
-  }
+	@media (min-width: 1000px) {
+		height: 100vh;
+		min-height: 46.875rem;
+	}
 }
 
 .c-scrollbar {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 11px;
-  height: 100%;
-  transform-origin: center right;
-  transition: transform 0.3s, opacity 0.3s;
-  opacity: 0;
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 11px;
+	height: 100%;
+	transform-origin: center right;
+	transition: transform 0.3s, opacity 0.3s;
+	opacity: 0;
 }
 
 .c-scrollbar:hover {
-  transform: scaleX(1.45);
+	transform: scaleX(1.45);
 }
 
 .c-scrollbar:hover,
 .has-scroll-scrolling .c-scrollbar,
 .has-scroll-dragging .c-scrollbar {
-  opacity: 1;
+	opacity: 1;
 }
 
 [data-scroll-direction='horizontal'] .c-scrollbar {
-  width: 100%;
-  height: 10px;
-  top: auto;
-  bottom: 0;
-  transform: scaleY(1);
+	width: 100%;
+	height: 10px;
+	top: auto;
+	bottom: 0;
+	transform: scaleY(1);
 }
 
 [data-scroll-direction='horizontal'] .c-scrollbar:hover {
-  transform: scaleY(1.3);
+	transform: scaleY(1.3);
 }
 
 .c-scrollbar_thumb {
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: $black;
-  opacity: 0.5;
-  width: 7px;
-  border-radius: 10px;
-  margin: 2px;
-  cursor: grab;
+	position: absolute;
+	top: 0;
+	right: 0;
+	background-color: $black;
+	opacity: 0.5;
+	width: 7px;
+	border-radius: 10px;
+	margin: 2px;
+	cursor: grab;
 }
 
 .has-scroll-dragging .c-scrollbar_thumb {
-  cursor: grabbing;
+	cursor: grabbing;
 }
 
 [data-scroll-direction='horizontal'] .c-scrollbar_thumb {
-  right: auto;
-  bottom: 0;
+	right: auto;
+	bottom: 0;
 }
 
 .o-scroll {
-  overflow: hidden;
+	overflow: hidden;
 }
 
 .c-fixed {
-  height: 100%;
-  background-size: cover;
-  background-position: 50%;
-  opacity: .75;
-  mix-blend-mode: multiply;
+	height: 100%;
+	background-size: cover;
+	background-position: 50%;
+	opacity: .75;
+	mix-blend-mode: multiply;
 }
 
 .c-fixed,
 .c-fixed_target {
-  position: absolute;
-  // top: -100vh;
-  top: 0;
-  right: 0;
-  left: 0;
+	position: absolute;
+	// top: -100vh;
+	top: 0;
+	right: 0;
+	left: 0;
 }
 
 .c-fixed_target {
-  bottom: -100vh;
+	bottom: -100vh;
 }
 
 @media (min-width: 1000px) {
-  .c-fixed_wrapper {
-    height: 100vh;
-  }
+	.c-fixed_wrapper {
+		height: 100vh;
+	}
 }
 
 // .c-fixed_wrapper {
